--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,6 @@ env:
   - PHP_VERSION=7.0.2
 
 before_install:
+  - sudo apt-get update
+  - sudo apt-get install docker-engine
   - docker build --build-arg PHP_VERSION=${PHP_VERSION} -t deeky666/php-${PHP_VERSION} .
