--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,104 @@ services:
   - docker
 
 env:
+  - PHP_VERSION=5.4.0
+  - PHP_VERSION=5.4.1
+  - PHP_VERSION=5.4.2
+  - PHP_VERSION=5.4.3
+  - PHP_VERSION=5.4.4
+  - PHP_VERSION=5.4.5
+  - PHP_VERSION=5.4.6
+  - PHP_VERSION=5.4.7
+  - PHP_VERSION=5.4.8
+  - PHP_VERSION=5.4.9
+  - PHP_VERSION=5.4.10
+  - PHP_VERSION=5.4.11
+  - PHP_VERSION=5.4.12
+  - PHP_VERSION=5.4.13
+  - PHP_VERSION=5.4.14
+  - PHP_VERSION=5.4.15
+  - PHP_VERSION=5.4.16
+  - PHP_VERSION=5.4.17
+  - PHP_VERSION=5.4.18
+  - PHP_VERSION=5.4.19
+  - PHP_VERSION=5.4.20
+  - PHP_VERSION=5.4.21
+  - PHP_VERSION=5.4.22
+  - PHP_VERSION=5.4.23
+  - PHP_VERSION=5.4.24
+  - PHP_VERSION=5.4.25
+  - PHP_VERSION=5.4.26
+  - PHP_VERSION=5.4.27
+  - PHP_VERSION=5.4.28
+  - PHP_VERSION=5.4.29
+  - PHP_VERSION=5.4.30
+  - PHP_VERSION=5.4.31
+  - PHP_VERSION=5.4.32
+  - PHP_VERSION=5.4.33
+  - PHP_VERSION=5.4.34
+  - PHP_VERSION=5.4.35
+  - PHP_VERSION=5.4.36
+  - PHP_VERSION=5.4.37
+  - PHP_VERSION=5.4.38
+  - PHP_VERSION=5.4.39
+  - PHP_VERSION=5.4.40
+  - PHP_VERSION=5.4.41
+  - PHP_VERSION=5.4.42
+  - PHP_VERSION=5.4.43
+  - PHP_VERSION=5.4.44
+  - PHP_VERSION=5.4.45
+  - PHP_VERSION=5.5.0
+  - PHP_VERSION=5.5.1
+  - PHP_VERSION=5.5.2
+  - PHP_VERSION=5.5.3
+  - PHP_VERSION=5.5.4
+  - PHP_VERSION=5.5.5
+  - PHP_VERSION=5.5.6
+  - PHP_VERSION=5.5.7
+  - PHP_VERSION=5.5.8
+  - PHP_VERSION=5.5.9
+  - PHP_VERSION=5.5.10
+  - PHP_VERSION=5.5.11
+  - PHP_VERSION=5.5.12
+  - PHP_VERSION=5.5.13
+  - PHP_VERSION=5.5.14
+  - PHP_VERSION=5.5.15
+  - PHP_VERSION=5.5.16
+  - PHP_VERSION=5.5.17
+  - PHP_VERSION=5.5.18
+  - PHP_VERSION=5.5.19
+  - PHP_VERSION=5.5.20
+  - PHP_VERSION=5.5.21
+  - PHP_VERSION=5.5.22
+  - PHP_VERSION=5.5.23
+  - PHP_VERSION=5.5.24
+  - PHP_VERSION=5.5.25
+  - PHP_VERSION=5.5.26
+  - PHP_VERSION=5.5.27
+  - PHP_VERSION=5.5.28
+  - PHP_VERSION=5.5.29
+  - PHP_VERSION=5.5.30
+  - PHP_VERSION=5.5.31
+  - PHP_VERSION=5.6.0
+  - PHP_VERSION=5.6.1
+  - PHP_VERSION=5.6.2
+  - PHP_VERSION=5.6.3
+  - PHP_VERSION=5.6.4
+  - PHP_VERSION=5.6.5
+  - PHP_VERSION=5.6.6
+  - PHP_VERSION=5.6.7
+  - PHP_VERSION=5.6.8
+  - PHP_VERSION=5.6.9
+  - PHP_VERSION=5.6.10
+  - PHP_VERSION=5.6.11
+  - PHP_VERSION=5.6.12
+  - PHP_VERSION=5.6.13
+  - PHP_VERSION=5.6.14
+  - PHP_VERSION=5.6.15
+  - PHP_VERSION=5.6.16
+  - PHP_VERSION=5.6.17
+  - PHP_VERSION=7.0.0
+  - PHP_VERSION=7.0.1
   - PHP_VERSION=7.0.2
 
 before_install:
@@ -11,7 +109,7 @@ before_install:
   - sudo apt-get install -y docker-engine
 
 before_script:
-  - docker build --build-arg PHP_VERSION=${PHP_VERSION} -t deeky666/php-${PHP_VERSION} .
+  - docker build --build-arg PHP_VERSION=${PHP_VERSION} -t deeky666/php:${PHP_VERSION} .
 
 script:
   - docker run deeky666/php-${PHP_VERSION} -v
@@ -24,4 +122,4 @@ script:
   - docker run deeky666/php-${PHP_VERSION} -d extension=mysqlnd.so -d extension=mysqli-mysqlnd.so -m
 
 after_success:
-  - if [ ! -z "$TRAVIS_TAG" ]; then docker login --email="$DOCKER_EMAIL" --username="$DOCKER_USERNAME" --password="$DOCKER_PASSWORD" && docker push deeky666/php-${PHP_VERSION} ; fi
+  - if [ ! -z "$TRAVIS_TAG" ]; then docker login -e="$DOCKER_EMAIL" -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD" && docker push deeky666/php:${PHP_VERSION} ; fi
