--- a/.travis.yml
+++ b/.travis.yml
@@ -82,6 +82,7 @@ env:
   - PHP_VERSION=5.5.29
   - PHP_VERSION=5.5.30
   - PHP_VERSION=5.5.31
+  - PHP_VERSION=5.5.32
   - PHP_VERSION=5.6.0
   - PHP_VERSION=5.6.1
   - PHP_VERSION=5.6.2
@@ -100,9 +101,11 @@ env:
   - PHP_VERSION=5.6.15
   - PHP_VERSION=5.6.16
   - PHP_VERSION=5.6.17
+  - PHP_VERSION=5.6.18
   - PHP_VERSION=7.0.0
   - PHP_VERSION=7.0.1
   - PHP_VERSION=7.0.2
+  - PHP_VERSION=7.0.3
 
 before_install:
   - sudo apt-get update -y --allow-unauthenticated
