--- a/.travis.yml
+++ b/.travis.yml
@@ -49,7 +49,7 @@ env:
   - PHP_VERSION=5.4.42
   - PHP_VERSION=5.4.43
   - PHP_VERSION=5.4.44
-  - PHP_VERSION=5.4.45
+  - PHP_VERSION=5.4.45 LATEST_MINOR=5.4
   - PHP_VERSION=5.5.0
   - PHP_VERSION=5.5.1
   - PHP_VERSION=5.5.2
@@ -82,7 +82,7 @@ env:
   - PHP_VERSION=5.5.29
   - PHP_VERSION=5.5.30
   - PHP_VERSION=5.5.31
-  - PHP_VERSION=5.5.32
+  - PHP_VERSION=5.5.32 LATEST_MINOR=5.5
   - PHP_VERSION=5.6.0
   - PHP_VERSION=5.6.1
   - PHP_VERSION=5.6.2
@@ -101,11 +101,11 @@ env:
   - PHP_VERSION=5.6.15
   - PHP_VERSION=5.6.16
   - PHP_VERSION=5.6.17
-  - PHP_VERSION=5.6.18
+  - PHP_VERSION=5.6.18 LATEST_MINOR=5.6 LATEST_MAJOR=5
   - PHP_VERSION=7.0.0
   - PHP_VERSION=7.0.1
   - PHP_VERSION=7.0.2
-  - PHP_VERSION=7.0.3
+  - PHP_VERSION=7.0.3 LATEST_MINOR=7.0 LATEST_MAJOR=7 LATEST=true
 
 before_install:
   - sudo apt-get update -y --allow-unauthenticated
@@ -113,6 +113,21 @@ before_install:
 
 before_script:
   - docker build --force-rm=true --build-arg PHP_VERSION=${PHP_VERSION} -t deeky666/php:${PHP_VERSION} .
+
+  - docker run deeky666/php:${PHP_VERSION} -v
+  - docker run deeky666/php:${PHP_VERSION} -d extension=pdo.so -d extension=pdo_sqlite.so -m
+  - docker run deeky666/php:${PHP_VERSION} -d extension=pdo.so -d extension=pdo_pgsql.so -m
+  - docker run deeky666/php:${PHP_VERSION} -d extension=pdo.so -d extension=pdo_mysql-libmysql.so -m
+  - docker run deeky666/php:${PHP_VERSION} -d extension=pdo.so -d extension=mysqlnd.so -d extension=pdo_mysql-mysqlnd.so -m
+  - docker run deeky666/php:${PHP_VERSION} -d extension=sqlite3.so -m
+  - docker run deeky666/php:${PHP_VERSION} -d extension=mysqli-libmysql.so -m
+  - docker run deeky666/php:${PHP_VERSION} -d extension=mysqlnd.so -d extension=mysqli-mysqlnd.so -m
+
+  - if [[ ! -z "$TRAVIS_TAG" && ! -z "$LATEST_MINOR" ]]; then docker tag deeky666/php:${PHP_VERSION} deeky666/php:${LATEST_MINOR}; fi
+  - if [[ ! -z "$TRAVIS_TAG" && ! -z "$LATEST_MAJOR" ]]; then docker tag deeky666/php:${PHP_VERSION} deeky666/php:${LATEST_MAJOR}; fi
+  - if [[ ! -z "$TRAVIS_TAG" && ! -z "$LATEST" ]]; then docker tag deeky666/php:${PHP_VERSION} deeky666/php:latest; fi
+  - if [ ! -z "$TRAVIS_TAG" ]; then docker login -e="$DOCKER_EMAIL" -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"; fi
+  - if [ ! -z "$TRAVIS_TAG" ]; then docker push deeky666/php; fi
 
 script:
   - docker run deeky666/php:${PHP_VERSION} -v
