--- a/.travis.yml
+++ b/.travis.yml
@@ -83,7 +83,8 @@ env:
   - PHP_VERSION=5.5.30
   - PHP_VERSION=5.5.31
   - PHP_VERSION=5.5.32
-  - PHP_VERSION=5.5.33 LATEST_MINOR=5.5
+  - PHP_VERSION=5.5.33
+  - PHP_VERSION=5.5.34 LATEST_MINOR=5.5
   - PHP_VERSION=5.6.0
   - PHP_VERSION=5.6.1
   - PHP_VERSION=5.6.2
