--- a/.travis.yml
+++ b/.travis.yml
@@ -86,7 +86,8 @@ env:
   - PHP_VERSION=5.5.33
   - PHP_VERSION=5.5.34
   - PHP_VERSION=5.5.35
-  - PHP_VERSION=5.5.36 LATEST_MINOR=5.5
+  - PHP_VERSION=5.5.36
+  - PHP_VERSION=5.5.37 LATEST_MINOR=5.5
   - PHP_VERSION=5.6.0
   - PHP_VERSION=5.6.1
   - PHP_VERSION=5.6.2
