--- a/.travis.yml
+++ b/.travis.yml
@@ -108,7 +108,8 @@ env:
   - PHP_VERSION=5.6.17
   - PHP_VERSION=5.6.18
   - PHP_VERSION=5.6.19
-  - PHP_VERSION=5.6.20 LATEST_MINOR=5.6 LATEST_MAJOR=5
+  - PHP_VERSION=5.6.20
+  - PHP_VERSION=5.6.21 LATEST_MINOR=5.6 LATEST_MAJOR=5
   - PHP_VERSION=7.0.0
   - PHP_VERSION=7.0.1
   - PHP_VERSION=7.0.2
