--- a/.travis.yml
+++ b/.travis.yml
@@ -111,7 +111,8 @@ env:
   - PHP_VERSION=5.6.20
   - PHP_VERSION=5.6.21
   - PHP_VERSION=5.6.22
-  - PHP_VERSION=5.6.23 LATEST_MINOR=5.6 LATEST_MAJOR=5
+  - PHP_VERSION=5.6.23
+  - PHP_VERSION=5.6.24 LATEST_MINOR=5.6 LATEST_MAJOR=5
   - PHP_VERSION=7.0.0
   - PHP_VERSION=7.0.1
   - PHP_VERSION=7.0.2
