--- a/.travis.yml
+++ b/.travis.yml
@@ -113,7 +113,8 @@ env:
   - PHP_VERSION=5.6.22
   - PHP_VERSION=5.6.23
   - PHP_VERSION=5.6.24
-  - PHP_VERSION=5.6.25 LATEST_MINOR=5.6 LATEST_MAJOR=5
+  - PHP_VERSION=5.6.25
+  - PHP_VERSION=5.6.26 LATEST_MINOR=5.6 LATEST_MAJOR=5
   - PHP_VERSION=7.0.0
   - PHP_VERSION=7.0.1
   - PHP_VERSION=7.0.2
