--- a/.travis.yml
+++ b/.travis.yml
@@ -120,7 +120,8 @@ env:
   - PHP_VERSION=7.0.0
   - PHP_VERSION=7.0.1
   - PHP_VERSION=7.0.2
-  - PHP_VERSION=7.0.3 LATEST_MINOR=7.0 LATEST_MAJOR=7 LATEST=true
+  - PHP_VERSION=7.0.3
+  - PHP_VERSION=7.0.4 LATEST_MINOR=7.0 LATEST_MAJOR=7 LATEST=true
 
 before_install:
   - sudo apt-get update -y --allow-unauthenticated
