--- a/.travis.yml
+++ b/.travis.yml
@@ -124,7 +124,8 @@ env:
   - PHP_VERSION=7.0.4
   - PHP_VERSION=7.0.5
   - PHP_VERSION=7.0.6
-  - PHP_VERSION=7.0.7 LATEST_MINOR=7.0 LATEST_MAJOR=7 LATEST=true
+  - PHP_VERSION=7.0.7
+  - PHP_VERSION=7.0.8 LATEST_MINOR=7.0 LATEST_MAJOR=7 LATEST=true
 
 before_install:
   - sudo apt-get update -y --allow-unauthenticated
