--- a/.travis.yml
+++ b/.travis.yml
@@ -125,7 +125,8 @@ env:
   - PHP_VERSION=7.0.5
   - PHP_VERSION=7.0.6
   - PHP_VERSION=7.0.7
-  - PHP_VERSION=7.0.8 LATEST_MINOR=7.0 LATEST_MAJOR=7 LATEST=true
+  - PHP_VERSION=7.0.8
+  - PHP_VERSION=7.0.9 LATEST_MINOR=7.0 LATEST_MAJOR=7 LATEST=true
 
 before_install:
   - sudo apt-get update -y --allow-unauthenticated
