--- a/.travis.yml
+++ b/.travis.yml
@@ -116,7 +116,8 @@ env:
   - PHP_VERSION=5.6.25
   - PHP_VERSION=5.6.26
   - PHP_VERSION=5.6.27
-  - PHP_VERSION=5.6.28 LATEST_MINOR=5.6 LATEST_MAJOR=5
+  - PHP_VERSION=5.6.28
+  - PHP_VERSION=5.6.29 LATEST_MINOR=5.6 LATEST_MAJOR=5
   - PHP_VERSION=7.0.0
   - PHP_VERSION=7.0.1
   - PHP_VERSION=7.0.2
